--- a/src/gc-repo/gc-repo-shell.html
+++ b/src/gc-repo/gc-repo-shell.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <dom-module id="gc-repo-shell">
   <template>
     <style></style>
@@ -10,6 +11,9 @@
     class GcRepoShell {
       get is() {
         return 'gc-repo-shell';
+      }
+      get behaviors() {
+        return [GitcheeseBehaviors.AppContextBehavior];
       }
     }
     new Polymer(GcRepoShell);
