--- a/src/gc-user/gc-user-shell.html
+++ b/src/gc-user/gc-user-shell.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <dom-module id="gc-user-shell">
   <template>
     <style></style>
@@ -10,6 +11,9 @@
     class GcUserShell {
       get is() {
         return 'gc-user-shell';
+      }
+      get behaviors() {
+        return [GitcheeseBehaviors.AppContextBehavior];
       }
     }
     new Polymer(GcUserShell);
