--- a/src/gc-app/gc-app.html
+++ b/src/gc-app/gc-app.html
@@ -1,21 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/app-layout/app-drawer/app-drawer.html">
-<link rel="import" href="../../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
-<link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
-<link rel="import" href="../../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
-<link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../gc-styles/gc-theme.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
+<link rel="import" href="../gc-layouts/gc-app-shell-layout.html">
 <link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-app/gc-login.html">
 <link rel="import" href="../gc-dashboard/gc-dashboard-shell.html">
@@ -23,63 +12,19 @@
 <dom-module id="gc-app">
   <template>
     <style include="shared-styles"></style>
-    <style>
-    .content {
-      @apply(--layout-horizontal);
-      @apply(--layout-center-justified);
-    }
-    
-    iron-pages {
-      max-width: 840px;
-      @apply(--layout-flex);
-    }
-    </style>
     <gc-login route="[[route]]" auth-user="{{authUser}}"></gc-login>
-
     <gc-active-route pattern="{{activePattern}}" fallback-pattern="/">
       <app-route route="{{route}}" pattern="/"></app-route>
       <app-route route="{{route}}" pattern="/repos/:id" data="{{repoRouteData}}"></app-route>
       <app-route route="{{route}}" pattern="/user"></app-route>
     </gc-active-route>
-
-    <app-drawer-layout force-narrow="true" fullbleed>
-      <app-drawer id="drawer">
-        <app-toolbar>Menu</app-toolbar>
-        <paper-menu>
-          <a href="/app">
-            <paper-item>
-              <paper-icon-item>
-                <iron-icon icon="home" item-icon></iron-icon>
-                Dashboard
-              </paper-icon-item>
-            </paper-item>
-          </a>
-          <a href="/app/user">
-            <paper-item>
-              <paper-icon-item>
-                <iron-icon icon="home" item-icon></iron-icon>
-                User
-              </paper-icon-item>
-            </paper-item>
-          </a>
-        </paper-menu>
-      </app-drawer>
-      <app-header-layout has-scrolling-region>
-        <app-header condenses reveals effects="waterfall">
-          <app-toolbar>
-            <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>Gitcheese</div>
-          </app-toolbar>
-        </app-header>
-        <div class="content">
-          <iron-pages selected="[[_activePage]]" attr-for-selected="for-pattern" selected-attribute="active">
-            <gc-dashboard-shell id="dashboard" auth-user="[[authUser]]" for-pattern="/"></gc-dashboard-shell>
-            <gc-repo-shell auth-user="[[authUser]]" for-pattern="/repos/:id" route="[[appSubroute]]"></gc-repo-shell>
-            <gc-user-shell auth-user="[[authUser]]" for-pattern="/user"></gc-user-shell>
-          </iron-pages>
-        </div>
-      </app-header-layout>
-    </app-drawer-layout>
+    <gc-app-shell-layout>
+      <iron-pages selected="[[_activePage]]" attr-for-selected="for-pattern" selected-attribute="active">
+        <gc-dashboard-shell id="dashboard" auth-user="[[authUser]]" for-pattern="/"></gc-dashboard-shell>
+        <gc-repo-shell auth-user="[[authUser]]" repo-id="[[repoRouteData.id]]" for-pattern="/repos/:id" route="[[appSubroute]]"></gc-repo-shell>
+        <gc-user-shell auth-user="[[authUser]]" for-pattern="/user"></gc-user-shell>
+      </iron-pages>
+    </gc-app-shell-layout>
   </template>
 
   <script>
