--- a/src/gc-user/gc-user-shell.html
+++ b/src/gc-user/gc-user-shell.html
@@ -1,9 +1,15 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../gc-layouts/gc-app-fragment-layout.html">
 <link rel="import" href="../gc-common/gc-app-context-behavior.html">
+<link rel="import" href="../gc-common/gc-shell-behavior.html">
+<link rel="import" href="../gc-styles/gc-shared-styles.html">
+<link rel="import" href="../gc-user/gc-user.html">
 <dom-module id="gc-user-shell">
   <template>
-    <style></style>
-    user shell
+    <style include="shared-styles"></style>
+    <gc-app-fragment-layout title="User" back-button>
+      <gc-user id="user" auth-user="[[authUser]]"></gc-user>
+    </gc-app-fragment-layout>
   </template>
   <script>
   (() => {
@@ -13,7 +19,10 @@
         return 'gc-user-shell';
       }
       get behaviors() {
-        return [GitcheeseBehaviors.AppContextBehavior];
+        return [GitcheeseBehaviors.AppContextBehavior, GitcheeseBehaviors.ShellBehavior];
+      }
+      activated() {
+        this.$.user.loadData();
       }
     }
     new Polymer(GcUserShell);
