--- a/src/gc-styles/gc-theme.html
+++ b/src/gc-styles/gc-theme.html
@@ -19,12 +19,12 @@
   /*
      * Primary and accent colors. Also see color.html for more colors.
      */
-  --primary-color: var(--paper-indigo-500);
-  --light-primary-color: var(--paper-indigo-100);
-  --dark-primary-color: var(--paper-indigo-700);
-  --accent-color: var(--paper-pink-a200);
-  --light-accent-color: var(--paper-pink-a100);
-  --dark-accent-color: var(--paper-pink-a400);
+  --primary-color: var(--paper-deep-purple-600);
+  --light-primary-color: var(--paper-deep-purple-200);
+  --dark-primary-color: var(--paper-deep-purple-800);
+  --accent-color: var(--paper-amber-a400);
+  --light-accent-color: var(--paper-amber-a200);
+  --dark-accent-color: var(--paper-amber-a700);
   /*
      * Material Design Light background theme
      */
