--- a/src/gc-layouts/gc-app-fragment-layout.html
+++ b/src/gc-layouts/gc-app-fragment-layout.html
@@ -5,6 +5,8 @@
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
+<link rel="import" href="../../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <dom-module id="gc-app-fragment-layout">
@@ -20,14 +22,38 @@
       max-width: 800px;
       @apply(--layout-flex);
     }
+    
+    iron-image {
+      --iron-image-height: 50px;
+    }
     </style>
-    <app-header id="header" condenses reveals effects="waterfall [[headerEffect]]">
-      <app-toolbar class="layout horizontal">
-        <template is="dom-if" if="[[backButton]]">
-          <paper-icon-button icon="arrow-back" on-tap="_handleBackTap"></paper-icon-button>
-        </template>
-        <div main-title>{{title}}</div>
-      </app-toolbar>
+    <iron-media-query query="(min-width: 601px)" query-matches="{{mobileSmall}}"></iron-media-query>
+    <app-header condenses reveals effects="waterfall">
+      <template is="dom-if" if="[[!mobileSmall]]">
+        <app-toolbar>
+          <template is="dom-if" if="[[!backButton]]">
+            <paper-icon-button icon="menu" on-tap="_toggleDrawer"></paper-icon-button>
+          </template>
+          <template is="dom-if" if="[[backButton]]">
+            <paper-icon-button icon="arrow-back" on-tap="_handleBackTap"></paper-icon-button>
+          </template>
+          <div main-title>{{title}}</div>
+        </app-toolbar>
+      </template>
+      <template is="dom-if" if="[[mobileSmall]]">
+        <app-toolbar>
+          <paper-icon-button icon="menu" on-tap="_toggleDrawer"></paper-icon-button>
+          <div main-title>Gitcheese</div>
+          <iron-image src="../../images/logo.svg"></iron-image>
+        </app-toolbar>
+        <app-toolbar>
+          <template is="dom-if" if="[[backButton]]">
+            <paper-icon-button icon="arrow-back" on-tap="_handleBackTap"></paper-icon-button>
+          </template>
+          <div main-title>{{title}}</div>
+        </app-toolbar>
+      </template>
+
     </app-header>
     <div class="content-wrapper">
       <div class="content">
@@ -52,6 +78,11 @@
       }
       _handleBackTap() {
         window.history.back();
+      }
+      _toggleDrawer() {
+        this.fire('iron-signal', {
+          name: 'toggle-drawer'
+        });
       }
     }
     new Polymer(GcAppFragmentLayout);
