--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -5,17 +5,24 @@
 <link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <dom-module id="gc-app-shell-layout">
   <template>
     <style include="shared-styles"></style>
-    <style></style>
+    <style>
 
-    <app-drawer-layout fullbleed>
+    </style>
+    <iron-signals on-iron-signal-toggle-drawer="_toggleDrawer"></iron-signals>
+    <app-drawer-layout fullbleed force-narrow>
       <app-drawer id="drawer">
-        <app-toolbar>Gitcheese</app-toolbar>
+        <app-toolbar>
+          <iron-icon src="../../images/logo.svg"></iron-icon>
+          Gitcheese
+        </app-toolbar>
         <paper-menu>
           <a href="/app">
             <paper-item>
@@ -46,6 +53,9 @@
     class GcAppShellLayout {
       get is() {
         return 'gc-app-shell-layout';
+      }
+      _toggleDrawer() {
+        this.$.drawer.toggle();
       }
     }
     new Polymer(GcAppShellLayout);
