--- a/src/gc-shell/gc-shell.html
+++ b/src/gc-shell/gc-shell.html
@@ -2,8 +2,8 @@
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../gc-styles/gc-shared-styles.html">
 <link rel="import" href="../gc-common/gc-active-route.html">
-<link rel="import" href="../gc-styles/gc-theme.html">
 <link rel="import" href="../gc-landing-page/gc-landing-page.html">
 <link rel="import" href="../gc-app/gc-app-loader-shell.html">
 <link rel="import" href="../gc-donate-app/gc-donate-app-loader-shell.html">
