--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -7,24 +7,28 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <dom-module id="gc-app-shell-layout">
   <template>
-    <style include="shared-styles"></style>
+    <style include="shared-styles iron-flex"></style>
     <style>
 
     </style>
     <iron-signals on-iron-signal-toggle-drawer="_toggleDrawer"></iron-signals>
     <app-drawer-layout fullbleed force-narrow>
       <app-drawer id="drawer">
-        <app-toolbar>
-          <iron-icon src="../../images/logo.svg"></iron-icon>
-          Gitcheese
+        <app-toolbar class="layout horizontal">
+          <span class="flex">Gitcheese</span>
+          <a href="/app/logout" tabindex="-1">
+            <paper-icon-button icon="exit-to-app"></paper-icon-button>
+          </a>
         </app-toolbar>
         <paper-menu>
-          <a href="/app">
+          <a href="/app" on-tap="_toggleDrawer">
             <paper-item>
               <paper-icon-item>
                 <iron-icon icon="home" item-icon></iron-icon>
@@ -32,11 +36,11 @@
               </paper-icon-item>
             </paper-item>
           </a>
-          <a href="/app/user">
+          <a href="/app/user" on-tap="_toggleDrawer">
             <paper-item>
               <paper-icon-item>
-                <iron-icon icon="home" item-icon></iron-icon>
-                User
+                <iron-icon icon="account-circle" item-icon></iron-icon>
+                User Profile
               </paper-icon-item>
             </paper-item>
           </a>
