--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
@@ -22,6 +23,7 @@
     <app-drawer-layout fullbleed force-narrow>
       <app-drawer id="drawer">
         <app-toolbar class="layout horizontal">
+          <iron-image src="../../images/logo.svg"></iron-image>
           <span class="flex">Gitcheese</span>
           <a href="/app/logout" tabindex="-1">
             <paper-icon-button icon="exit-to-app"></paper-icon-button>
