--- a/src/gc-user/gc-user.html
+++ b/src/gc-user/gc-user.html
@@ -1,20 +1,43 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
+<link rel="import" href="../gc-common/gc-api-ajax.html">
+<link rel="import" href="../gc-user/gc-user-managed-accounts-external-account-info.html">
+<link rel="import" href="../gc-user/gc-user-managed-accounts-legal-entity-info.html">
+<link rel="import" href="../gc-user/gc-user-managed-accounts-terms-of-service-info.html">
 <dom-module id="gc-user">
   <template>
     <style include="shared-styles"></style>
-    <gc-api-ajax id="get" url="/user" auth-user="[[authUser]]" last-response="{{user}}"></gc-api-ajax>
+    <gc-api-ajax id="getProfile" url="/user" auth-user="[[authUser]]" last-response="{{user}}"></gc-api-ajax>
+    <gc-api-ajax id="getManagedAccount" url="/user/managed-accounts" auth-user="[[authUser]]" last-response="{{managedAccount}}"></gc-api-ajax>
 
     <paper-material elevation="1" class="edge-breaking">
-      <p>Profile</p>
-      <paper-input value="{{user.email}}"></paper-input>
+      <form is="iron-form" id="profileForm">
+        <p>Profile</p>
+        <gold-email-input label="email" value="{{user.email}}" auto-validate required error-message="valid e-mail is required."></gold-email-input>
+        <div actions>
+          <paper-button on-tap="_saveProfile">save</paper-button>
+        </div>
+      </form>
     </paper-material>
 
     <paper-material elevation="1">
-      <p>Stripe Identity</p>
+
+      <div class="layout horizontal">
+        <p class="flex">Stripe Identity</p>
+        <p><i>[[managedAccount.country]]</i></p>
+      </div>
+      <gc-user-managed-accounts-legal-entity-info managed-account="[[managedAccount]]">
+      </gc-user-managed-accounts-legal-entity-info>
+      <gc-user-managed-accounts-external-account-info managed-account="[[managedAccount]]">
+      </gc-user-managed-accounts-external-account-info>
+      <gc-user-managed-accounts-terms-of-service-info managed-account="[[managedAccount]]">
+      </gc-user-managed-accounts-terms-of-service-info>
     </paper-material>
   </template>
   <script>
@@ -28,7 +51,11 @@
         return [GitcheeseBehaviors.AppContextBehavior];
       }
       loadData() {
-        this.$.get.generateRequest();
+        this.$.getProfile.generateRequest();
+        this.$.getManagedAccount.generateRequest();
+      }
+      _saveProfile() {
+        console.log(this.$.profileForm.validate())
       }
     }
     new Polymer(GcUser);
