--- a/src/gc-user/gc-user-managed-accounts-external-account-info.html
+++ b/src/gc-user/gc-user-managed-accounts-external-account-info.html
@@ -61,7 +61,7 @@
         let icons = {
           'ok': 'check-circle',
           'required': 'report-problem',
-          'report-problem': 'report'
+          'past-due': 'report'
         }
         return icons[status];
       }
