--- a/src/gc-repo/gc-repo.html
+++ b/src/gc-repo/gc-repo.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <link rel="import" href="../gc-common/gc-api-ajax.html">
@@ -8,11 +9,18 @@
   <template>
     <style include="shared-styles"></style>
     <gc-api-ajax id="get" url="/user/repos/[[repoId]]" auth-user="[[authUser]]" last-response="{{repo}}"></gc-api-ajax>
+    <gc-api-ajax id="getUser" url="/user" auth-user="[[authUser]]" last-response="{{user}}"></gc-api-ajax>
     <paper-material elevation="1">
       <p>Donations</p>
     </paper-material>
     <paper-material elevation="1">
-      <p>Badge</p>
+      <div class="layout horizontal">
+        <p class="flex">Badge</p>
+        <iron-image src="../../images/badge.svg"></iron-image>
+      </div>
+      <p>
+        <code>[![gitcheese.com](https://www.gitcheese.com/images/badge.svg)](https://www.gitcheese.com/donate/users/[[user.id]]/repos/[[repo.id]])</code>
+      </p>
     </paper-material>
   </template>
   <script>
@@ -35,6 +43,7 @@
       }
       loadData() {
         this.$.get.generateRequest();
+        this.$.getUser.generateRequest();
       }
     }
     new Polymer(GcRepo);
