Added account configuration and loading indicator

--- a/src/gc-styles/gc-shared-styles.html
+++ b/src/gc-styles/gc-shared-styles.html
@@ -59,6 +59,8 @@
         color: var(--dark-theme-text-color);
         --iron-icon-fill-color: var(--dark-theme-text-color);
       }
+      ;
+      --paper-progress-active-color:var(--accent-color);
     }
     
     app-header {
