--- a/src/gc-app/gc-account-setup.html
+++ b/src/gc-app/gc-account-setup.html
@@ -134,7 +134,7 @@
               name: 'Singapore'
             }]
           }
-        }
+        };
       }
       get observers() {
         return ['_handleAuthUserChanged(authUser)'];
@@ -156,7 +156,7 @@
         this.$.get.generateRequest();
       }
     }
-    new Polymer(GcAccountSetup);
+    Polymer(GcAccountSetup);
   })();
   </script>
 </dom-module>
