--- a/src/gc-repo/gc-repo.html
+++ b/src/gc-repo/gc-repo.html
@@ -8,6 +8,11 @@
 <dom-module id="gc-repo">
   <template>
     <style include="shared-styles"></style>
+    <style>
+    code {
+      word-break: break-word;
+    }
+    </style>
     <gc-api-ajax id="get" url="/user/repos/[[repoId]]" auth-user="[[authUser]]" last-response="{{repo}}"></gc-api-ajax>
     <gc-api-ajax id="getUser" url="/user" auth-user="[[authUser]]" last-response="{{user}}"></gc-api-ajax>
     <paper-material elevation="1">
