--- a/src/gc-common/gc-active-route.html
+++ b/src/gc-common/gc-active-route.html
@@ -32,6 +32,9 @@
           () => this._handleActiveChanged(route));
         if (route.active) this._setPattern(route.pattern);
       });
+      if (this.fallbackPattern && !this.pattern) {
+        this._setPattern(this.fallbackPattern)
+      }
     }
     _handleActiveChanged(route) {
       let activeRoute = this.routes.find((r) => r.active);
