--- a/src/gc-user/gc-user-managed-accounts-legal-entity-info.html
+++ b/src/gc-user/gc-user-managed-accounts-legal-entity-info.html
@@ -2,22 +2,49 @@
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <link rel="import" href="../gc-common/gc-api-ajax.html">
 <dom-module id="gc-user-managed-accounts-legal-entity-info">
   <template>
     <style include="shared-styles"></style>
+    <gc-api-ajax id="put" url="/user/managed-accounts/legal-entity/basic" method="put" auth-user="[[authUser]]" body="[[newInfo]]"></gc-api-ajax>
+
     <div class="layout horizontal">
       <p class="flex">
         <iron-icon icon="[[_statusIcon]]"></iron-icon>
         Personal Information
       </p>
-
       <paper-icon-button icon="[[_chevronIcon]]" on-tap="toggle"></paper-icon-button>
     </div>
     <iron-collapse opened="[[_expanded]]">
-      <div>Content goes here...</div>
+      <form id="form" is="iron-form">
+        <div class="layout horizontal">
+          <paper-dropdown-menu class="flex" label="Type">
+            <paper-listbox class="dropdown-content" selected="0" on-selected-item-changed="_handleTypeChanged">
+              <paper-item type="individual">Individual</paper-item>
+              <paper-item type="company">Company</paper-item>
+            </paper-listbox>
+          </paper-dropdown-menu>
+        </div>
+        <div class="layout horizontal">
+          <paper-input class="flex" value="{{newInfo.legalEntityFirstName}}" label="First Name" required auto-validate error-message="First Name is required."></paper-input>
+          <paper-input class="flex" value="{{newInfo.legalEntityLastName}}" label="Last Name" required auto-validate error-message="Last Name is required."></paper-input>
+        </div>
+        <div class="layout horizontal flex">
+          <paper-input class="flex" value="{{newInfo.legalEntityDobDay}}" label="Date Of Birth - Day" type="number" required auto-validate error-message="Date Of Birth - Day is required."></paper-input>
+          <paper-input class="flex" value="{{newInfo.legalEntityDobMonth}}" label="Date Of Birth - Month" type="number" required auto-validate error-message="Date Of Birth - Month is required."></paper-input>
+          <paper-input class="flex" value="{{newInfo.legalEntityDobYear}}" label="Date Of Birth - Year" type="number" required auto-validate error-message="Date Of Birth - Year is required."></paper-input>
+        </div>
+        <div actions>
+          <paper-button on-tap="_submit">submit</paper-button>
+        </div>
+      </form>
     </iron-collapse>
   </template>
   <script>
@@ -26,6 +53,9 @@
     class GcUserManagedAccountsLegalEntityInfo {
       get is() {
         return 'gc-user-managed-accounts-legal-entity-info';
+      }
+      get behaviors() {
+        return [GitcheeseBehaviors.AppContextBehavior];
       }
       get properties() {
         return {
@@ -36,6 +66,10 @@
           managedAccount: {
             type: Object,
             observer: '_managedAccountChanged'
+          },
+          newInfo: {
+            type: Object,
+            value: {}
           },
           _expanded: {
             type: Boolean,
@@ -74,6 +108,14 @@
         } else {
           this.status = 'required';
         }
+      }
+      _handleTypeChanged(e, data) {
+        if (!data.value) return;
+        this.newInfo.legalEntityType = data.value.attributes['type'].value;
+      }
+      _submit() {
+        if (!this.$.form.validate()) return;
+        this.$.put.generateRequest();
       }
     }
     new Polymer(GcUserManagedAccountsLegalEntityInfo);
