--- a/src/gc-repo/gc-repo.html
+++ b/src/gc-repo/gc-repo.html
@@ -24,7 +24,7 @@
         <iron-image src="../../images/badge.svg"></iron-image>
       </div>
       <p>
-        <code>[![gitcheese.com](https://www.gitcheese.com/images/badge.svg)](https://www.gitcheese.com/donate/users/[[user.id]]/repos/[[repo.id]])</code>
+        <code>[![gitcheese.com](https://s3.amazonaws.com/gitcheese-ui-dev/images/badge.svg)](https://www.gitcheese.com/donate/users/[[user.id]]/repos/[[repo.id]])</code>
       </p>
     </paper-material>
   </template>
